--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -5,18 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Home</title>
 </head>
 
 <body>
-    <h1>Hello World</h1>
-    <form action="/submit" method="post">
-        <label for="namefield">Name:</label>
-        <input type="text" id="namefield" name="name">
-        <label for="agefield">Age:</label>
-        <input type="number" id="agefield" name="age">
-        <input type="submit" value="Submit">
-    </form>
+    <h1>Play some games</h1>
+    <a href="/rockpaperscissors">Play rock paper scissors game</a>
 </body>
 
 </html>
