--- a/api/templates/rockpaperscissors.html
+++ b/api/templates/rockpaperscissors.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Rock Paper Scissors Game</h1>
     <form action="/rockpaperscissors" method="post">
-        <label for="rock">Rock</label>
+        <label for="rock"><img src="../rock.png" alt="Rock" width="200" height="200"></label>
         <input type="radio" id="rock" name="input" value="rock">
         <label for="paper">Paper</label>
         <input type="radio" id="paper" name="input" value="paper">
