change to last choice

--- a/api/templates/rockpaperscissors.html
+++ b/api/templates/rockpaperscissors.html
@@ -20,8 +20,8 @@
         <br>
         <button type="submit">Submit</button>
     </form>
-    <p>Your choice: {{ input }}</p>
-    <p>NPC choice: {{ bot_input }}</p>
+    <p>Your last choice: {{ input }}</p>
+    <p>NPC last choice: {{ bot_input }}</p>
     <p>{{ result }}</p>
     <a href="/">Back to home</a>
 </body>
