--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>Play some games</h1>
-    <a href="/rockpaperscissors">Play rock paper scissors game</a>
+    <h1 align="center">Play some games</h1>
+    <a align="center" href="/rockpaperscissors">Play rock paper scissors game</a>
 </body>
 
 </html>
