--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <h1 align="center">Play some games</h1>
-    <a align="center" href="/rockpaperscissors">Play rock paper scissors game</a>
+    <br/>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Rock-paper-scissors.svg/1200px-Rock-paper-scissors.svg.png" width="400" style="float: left;"/>
+    <center><a href="/rockpaperscissors">Play rock paper scissors game</a></center>
 </body>
 
 </html>
