--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -11,8 +11,10 @@
 <body>
     <h1 align="center">Play some games</h1>
     <br/>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Rock-paper-scissors.svg/1200px-Rock-paper-scissors.svg.png" width="400" style="float: left;"/>
-    <center><a href="/rockpaperscissors">Play rock paper scissors game</a></center>
+    <center>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Rock-paper-scissors.svg/1200px-Rock-paper-scissors.svg.png" width="400"/>
+        <a href="/rockpaperscissors">Click here to play rock paper scissors</a>
+    </center>
 </body>
 
 </html>
