--- a/api/templates/rockpaperscissors.html
+++ b/api/templates/rockpaperscissors.html
@@ -11,14 +11,18 @@
 <body>
     <h1>Rock Paper Scissors Game</h1>
 
-    <form action="/rockpaperscissors" method="post" id="gameForm">
-        <input type="hidden" name="input" id="input" value="">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKQLogI6N-WNA11BQYemy5ayImKPpRrguPp6I27VMl4qEtytfYHF3DqD094WBKzNbpJ5w&usqp=CAU" 
-            alt="Rock" onclick="setValueAndSubmit("rock")">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUy4d-pmFGXpE5CWLImhNy66dUNnovlWL66AHYKhyHUmPyl-45MbAlOqNnRF3m-BEIjkQ&usqp=CAU" 
-            alt="Scissor" onclick="setValueAndSubmit("scissor")">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJmmKD1kXcKkp6DglJ9XfmWKklh3tLApTGrBAYsy6HyZN-z1jc_gXpIEwKTaXvcSA97HQ&usqp=CAU" 
-            alt="Paper" onclick="setValueAndSubmit("paper")">
+    <form action="/rockpaperscissors" method="post">
+        <button name="input" type="submit" value="rock">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKQLogI6N-WNA11BQYemy5ayImKPpRrguPp6I27VMl4qEtytfYHF3DqD094WBKzNbpJ5w&usqp=CAU" alt="ROCK">
+        </button>
+
+        <button name="input" type="submit" value="scissor">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUy4d-pmFGXpE5CWLImhNy66dUNnovlWL66AHYKhyHUmPyl-45MbAlOqNnRF3m-BEIjkQ&usqp=CAU" alt="SCISSOR">
+        </button>
+
+        <button name="input" type="submit" value="paper">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJmmKD1kXcKkp6DglJ9XfmWKklh3tLApTGrBAYsy6HyZN-z1jc_gXpIEwKTaXvcSA97HQ&usqp=CAU" alt="PAPER">
+        </button>
     </form>
 
     <script>
