--- a/api/templates/rockpaperscissors.html
+++ b/api/templates/rockpaperscissors.html
@@ -17,8 +17,8 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKQLogI6N-WNA11BQYemy5ayImKPpRrguPp6I27VMl4qEtytfYHF3DqD094WBKzNbpJ5w&usqp=CAU" alt="ROCK">
         </button>
 
-        <button name="input" type="submit" value="scissor">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUy4d-pmFGXpE5CWLImhNy66dUNnovlWL66AHYKhyHUmPyl-45MbAlOqNnRF3m-BEIjkQ&usqp=CAU" alt="SCISSOR">
+        <button name="input" type="submit" value="scissors">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUy4d-pmFGXpE5CWLImhNy66dUNnovlWL66AHYKhyHUmPyl-45MbAlOqNnRF3m-BEIjkQ&usqp=CAU" alt="SCISSORS">
         </button>
 
         <button name="input" type="submit" value="paper">
