--- a/api/templates/githubform.html
+++ b/api/templates/githubform.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <form action="/github_api" method="post">
-        <label for="username" >GitHub username: </label><br>
+    <form action="/github/form/submit" method="post">
+        <label for="username">GitHub username: </label><br>
         <input text="text" id="username" name="username"><br>
         <input type="submit" value="Submit">
     </form>
 </body>
+
 </html>
