--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -10,12 +10,15 @@
 
 <body>
     <h1 align="center">Play some games</h1>
-    <br/>
+    <br />
     <center>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Rock-paper-scissors.svg/1200px-Rock-paper-scissors.svg.png" width="400"/>
-        <br/>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Rock-paper-scissors.svg/1200px-Rock-paper-scissors.svg.png"
+            width="400" />
+        <br />
         <a href="/rockpaperscissors">Click here to play rock paper scissors</a>
     </center>
+    <br><br><br>
+    <a href="/github/form">Psst.. Click here to check some GitHub user!</a>
 </body>
 
 </html>
